2008-02-14  Geoff Norton  <gnorton@novell.com>

	* MacPlatform.cs:  Expose the Name property.

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MacPlatform.addin.xml: Update MD version.

2007-12-17  Geoff Norton  <gnorton@novell.com>

	* Makefile.am: Fix the build on the Mac profile

2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 

	* MacPlatform.addin.xml, MacPlatform.cs: Moved PlatformService to
	  MD.Core.Gui. Removed old FileIconService class, which is now implemented
	  in PlatformService.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MacPlatform.addin.xml: Bump add-in versions.

2007-12-06  Geoff Norton  <gnorton@novell.com>
	
	* Initial check in of the Mac PlatformService that provides
	Mac equivalents to the Gnome calls in Gnome.Vfs