@@ -1,3 +1,7 @@
+2008-04-11  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* MacPlatform.cs: Track api changes.
+
 2008-02-14  Geoff Norton  <gnorton@novell.com>
 
 	* MacPlatform.cs:  Expose the Name property.
